@@ -2,66 +2,82 @@ package com.example.cloudBalanceBackend.service;
 
 import com.example.cloudBalanceBackend.dto.AccountDto;
 import com.example.cloudBalanceBackend.dto.CreateAccountRequest;
-import com.example.cloudBalanceBackend.exception.AccountException;
 import com.example.cloudBalanceBackend.model.*;
 import com.example.cloudBalanceBackend.repository.*;
-import org.springframework.security.core.Authentication;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
+@RequiredArgsConstructor
 public class AccountService {
 
     private final AccountRepository accountRepo;
     private final UserAccountRepository uaRepo;
     private final AuditLogger auditLogger;
 
-    public AccountService(AccountRepository accountRepo, UserAccountRepository uaRepo, AuditLogger auditLogger) {
-        this.accountRepo = accountRepo;
-        this.uaRepo = uaRepo;
-        this.auditLogger = auditLogger;
-    }
+    /**
+     * Create a new cloud account (Admin only)
+     */
+    public Account createAccount(CreateAccountRequest req, String actorId) {
+        log.info("Creating account: name={}, provider={}", req.getName(), req.getProvider());
 
-    public Account createAccount(CreateAccountRequest req) {
         Account a = Account.builder()
                 .id(UUID.randomUUID().toString())
-                .name(req.getName())
+                .name(req.getName())  //Prod AWS Account
                 .provider(req.getProvider())
                 .providerAccountId(req.getProviderAccountId())
-                .meta(req.getMeta())
+                .meta(req.getMeta()) //Region, owner, env
                 .status("ORPHAN")
                 .createdAt(Instant.now())
                 .updatedAt(Instant.now())
                 .build();
 
         Account saved = accountRepo.save(a);
-        auditLogger.log("CREATE_ACCOUNT", "system",
-                "Created account: " + saved.getId() + " provider=" + saved.getProvider());
+        log.info("Created account: id={}, status=ORPHAN", saved.getId());
+
+        auditLogger.log(
+                "CREATE_ACCOUNT",
+                actorId,
+                "Created account " + saved.getId() + " (provider: " + saved.getProvider() + ")"
+        );
+
         return saved;
     }
 
-    public boolean hasRole(Authentication auth, Role role) {
-        if (auth == null) return false;
-        return auth.getAuthorities().stream()
-                .anyMatch(a -> a.getAuthority().equals("ROLE_" + role.name()));
-    }
+    /**
+     * List visible accounts based on user role
+     * - ADMIN and READ_ONLY: Can see ALL accounts
+     * - CUSTOMER: Can only see assigned accounts
+     */
+    public List<AccountDto> listVisibleAccounts(User user) {
+        log.debug("Listing visible accounts for user: {} with role: {}", user.getEmail(), user.getRole());
 
-    public List<AccountDto> listAccounts(Authentication auth) {
-        try {
-            if (hasRole(auth, Role.ADMIN) || hasRole(auth, Role.READ_ONLY)) {
-                return accountRepo.findAll().stream().map(AccountDto::new).toList();
-            } else {
-                String userId = auth.getName();
-                return uaRepo.findByUserId(userId).stream()
-                        .map(UserAccount::getAccount)
-                        .map(AccountDto::new)
-                        .toList();
-            }
-        } catch (Exception e) {
-            throw new AccountException("Failed to list accounts", e);
+        if (user.getRole() == Role.ADMIN || user.getRole() == Role.READ_ONLY) {
+            // Admin and Read-Only can see ALL accounts
+            List<AccountDto> allAccounts = accountRepo.findAll()
+                    .stream()
+                    .map(AccountDto::new)
+                    .collect(Collectors.toList());
+            log.info("User {} (role: {}) can see all {} accounts",
+                    user.getEmail(), user.getRole(), allAccounts.size());
+            return allAccounts;
         }
+
+        // CUSTOMER → assigned accounts only
+        List<AccountDto> assignedAccounts = uaRepo.findByUserId(user.getId())
+                .stream()
+                .map(UserAccount::getAccount)
+                .map(AccountDto::new)
+                .collect(Collectors.toList());
+        log.info("User {} (role: CUSTOMER) can see {} assigned accounts",
+                user.getEmail(), assignedAccounts.size());
+        return assignedAccounts;
     }
 }
